--- a/src/styles/components/footer_prefixed.css
+++ b/src/styles/components/footer_prefixed.css
@@ -17,7 +17,8 @@ footer {
 }
 
 .logo_footer {
-    height:125px
+    margin-top: -30px;
+    height:140px
 }
 
 .footer_direita {
@@ -40,14 +41,15 @@ footer {
 
 @media screen and (max-width: 920px) {
     .logo_footer {
-        width:60%;
-        height:40%
+        height:60%;
+        width:fit-content;
     }
     .footer_esquerda {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
                 flex-direction: column;
+        grid-gap: 0px;
     }
     .footer_direita {
         display: -webkit-box;
@@ -88,7 +90,8 @@ footer {
         height: 100px;
     }
     .logo_footer {
-        height:90px;
+        margin-top: -40px;
+        height:150px;
         width:auto
     }
     .footer_direita {
@@ -96,6 +99,7 @@ footer {
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
                 flex-direction: column;
+        justify-content: center;
         gap: 10px;
         margin-left: 5%;
     }
