--- a/src/styles/components/footer_prefixed.css
+++ b/src/styles/components/footer_prefixed.css
@@ -31,7 +31,7 @@ footer {
 
 .container_contatos {
     display: grid;
-    grid-template-columns: repeat(3, 15%);
+    grid-template-columns: repeat(4, 15%);
     gap: 5%;
 }
 
@@ -59,11 +59,12 @@ footer {
         margin-left: -5%;
     }
     .container_contatos {
-        width: 50px;
-        grid-template-columns: none;
-        grid-template-rows: repeat(3, 5%);
-        gap: 1%;
-        margin-left: 25%;
+        width: 120px;
+        height: 120px;
+        grid-template-columns: repeat(2, 1fr);;
+        grid-template-rows: repeat(2, 50%);
+        gap: 20px;
+        /* margin-left: 25%; */
     }
     .logo_contato {
         height: 100%;
@@ -105,9 +106,9 @@ footer {
     }
     .container_contatos {
         width: 100%;
-        grid-template-columns: repeat(3, 15%);
+        grid-template-columns: repeat(4, 15%);
         grid-template-rows: none;
-        gap: 1%;
+        gap: 3%;
         margin-left: 0%;
     }
     .logo_contato {
