--- a/src/styles/pages/index_prefixed.css
+++ b/src/styles/pages/index_prefixed.css
@@ -257,6 +257,7 @@
     position: relative;
     overflow: hidden;
     height: 110vh;
+    width: 100vw;
 }
 
 .Background_concierge {
@@ -480,6 +481,7 @@
     .secao4 {
         overflow: hidden;
         height: 1000px;
+        width: 100vw;
     }
     .grid_concierge {
         grid-template-columns: repeat(1,1fr);
@@ -537,9 +539,11 @@
     }
     .secao4 {
         height: 800px;
+        width: 100vw;
     }
     .grid_concierge {
         height: 60%;
+        width: 100vw;
         grid-template-columns: repeat(1,1fr);
         grid-template-rows: 60% 40%;
         gap:5%
