--- a/src/styles/pages/index_prefixed.css
+++ b/src/styles/pages/index_prefixed.css
@@ -484,7 +484,7 @@
         width: 100vw;
     }
     .grid_concierge {
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: unset;
         grid-template-rows: 60% 40%;
         gap:5%
     }
@@ -544,7 +544,7 @@
     .grid_concierge {
         height: 60%;
         width: 100vw;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: unset;
         grid-template-rows: 60% 40%;
         gap:5%
     }
